// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/taylorzhangyx/grpctayzhangtest/taylorzhtestpb";

package taylorzhtest;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc LoadTest (LoadTestRequest) returns (LoadTestReply) {}
  rpc LoadTestMetrics (LoadTestMetricsRequest) returns (LoadTestMetricsReply) {}
  rpc LoadTestClear (LoadTestClearRequest) returns (LoadTestClearReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message LoadTestRequest{
  string body = 1;
}

message LoadTestReply{
  int32 retCode = 1;
}

message LoadTestMetricsRequest{
}

message LoadTestMetricsReply{
  map<int64, int64> retCode = 1;
}

message LoadTestClearRequest{
}

message LoadTestClearReply{
  int32 retCode = 1;
}
